<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".fragments.UploadCompleteFragment">

    <ImageView
        android:id="@+id/clover"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/gif_image"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"/>

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/clover">

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/startend_margin"
            android:layout_marginEnd="@dimen/startend_margin"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/lexendbold"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/donated"
            android:textColor="@color/black"
            android:textSize="38dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeTxt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/startend_margin"
            android:layout_marginEnd="@dimen/startend_margin"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lexendmedium"
            android:justificationMode="inter_word"
            android:lineSpacingMultiplier="1.5"
            android:textColor="@color/notsoBlack"
            android:text="@string/completeTxt"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/toHomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/startend_margin"
        android:layout_marginEnd="@dimen/startend_margin"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/lexendbold"
        android:text="@string/tohome"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp" />



</RelativeLayout>